--- a/webui/src/assets/main.css
+++ b/webui/src/assets/main.css
@@ -12,6 +12,19 @@
 	}
 }
 
+html,
+body {
+	height: 100%;
+	background-image: url("wallpaper.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+body {
+	padding-top: 75px;
+}
+
 .b-example-divider {
 	height: 3rem;
 	background-color: rgba(0 0 0 / 10%);
@@ -50,11 +63,18 @@
 }
 
 .feather {
-/*	width: 24px;
+	/*	width: 24px;
 	height: 24px;*/
 	stroke: currentColor;
 	stroke-width: 2;
 	stroke-linecap: round;
 	stroke-linejoin: round;
 	fill: none;
+}
+
+@media (min-width: 768px) {
+	.feather {
+		width: 32px;
+		height: 32px;
+	}
 }
