--- a/webui/src/assets/main.css
+++ b/webui/src/assets/main.css
@@ -16,9 +16,10 @@ html,
 body {
 	height: 100%;
 	background-image: url("wallpaper.png");
-	background-position: center;
+	background-position: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
 }
 
 body {
